# ChangeLog for dev-python/flake8
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/flake8/ChangeLog,v 1.11 2014/05/04 16:16:02 maekke Exp $

  04 May 2014; Markus Meier <maekke@gentoo.org> flake8-2.0.ebuild:
  add ~arm, bug #508282

  25 Apr 2014; Jeroen Roovers <jer@gentoo.org> flake8-2.0.ebuild,
  flake8-2.1.0.ebuild:
  Marked ~hppa (bug #508282).

  30 Mar 2014; Ian Delaney <idella4@gentoo.org> flake8-2.1.0.ebuild:
  minor tidy

  19 Mar 2014; Sébastien Fabbro <bicatali@gentoo.org> flake8-2.1.0.ebuild:
  Keyword ~amd64-linux ~x86-linux

*flake8-2.1.0 (09 Jan 2014)

  09 Jan 2014; Matthew Thode <prometheanfire@gentoo.org> +flake8-2.1.0.ebuild:
  bump of flake8 to 2.1.0

  11 Dec 2013; Mike Gilbert <floppym@gentoo.org> flake8-2.0.ebuild:
  Depend on dev-python/mccabe for tests, bug 493922 by Nikoli.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> flake8-2.0.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  28 Aug 2013; Agostino Sarubbo <ago@gentoo.org> flake8-2.0.ebuild:
  Stable for x86, wrt bug #450086

  30 Jul 2013; Agostino Sarubbo <ago@gentoo.org> flake8-2.0.ebuild:
  Stable for amd64, wrt bug #450086

  07 Jun 2013; Ian Delaney <idella4@gentoo.org> flake8-2.0.ebuild:
  Set mccabe to PDEPEND, fixes Bug #472442

*flake8-2.0 (31 May 2013)

  31 May 2013; Ian Delaney <idella4@gentoo.org> +flake8-2.0.ebuild,
  +metadata.xml:
  new dep to django-compressor, initial ebuild written by me