@@ -1,10 +1,10 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/flake8/flake8-2.1.0.ebuild,v 1.4 2014/04/25 14:24:25 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/flake8/flake8-2.1.0.ebuild,v 1.5 2014/06/06 08:58:41 idella4 Exp $
 
 EAPI=5
 
-PYTHON_COMPAT=( python{2_6,2_7,3_2,3_3} )
+PYTHON_COMPAT=( python{2_7,3_2,3_3,3_4} )
 
 inherit distutils-r1
 
@@ -12,7 +12,7 @@ DESCRIPTION="A wrapper around PyFlakes, pep8 & mccabe"
 HOMEPAGE="http://bitbucket.org/tarek/flake8"
 SRC_URI="mirror://pypi/${PN:0:1}/${PN}/${P}.tar.gz"
 
-KEYWORDS="~amd64 ~hppa ~x86 ~amd64-linux ~x86-linux"
+KEYWORDS="~amd64 ~arm ~hppa ~x86 ~amd64-linux ~x86-linux"
 IUSE="test"
 LICENSE="MIT"
 SLOT="0"
@@ -26,6 +26,12 @@ DEPEND="${RDEPEND}
 	test? ( ${PDEPEND}
 		dev-python/nose[${PYTHON_USEDEP}]
 		dev-python/mock[${PYTHON_USEDEP}] )"
+
+python_prepare_all() {
+	# This tests requires / assumes this version is already installed.
+	sed -e 's:test_register_extensions:_&:' -i flake8/tests/test_engine.py || die
+	distutils-r1_python_prepare_all
+}
 
 python_test() {
 	esetup.py test
